emailsvc-microservice.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: 2020-02-25T09:15:54Z
    generation: 2
    labels:
      app: emailsvc
      microservice: emailsvc
    name: emailsvc
    namespace: myser1
    resourceVersion: "348013"
    selfLink: /apis/apps.openshift.io/v1/namespaces/myser/deploymentconfigs/emailsvc
    uid: 6d1a144e-57af-11ea-8374-026d5f68d8cc
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: emailsvc
      deploymentconfig: emailsvc
      microservice: emailsvc
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: emailsvc
          deploymentconfig: emailsvc
          microservice: emailsvc
      spec:
        containers:
        - env:
          - name: EMAIL_APPLICATION_DOMAIN
            value: http://emailsvc:8080
          image: docker-registry.default.svc:5000/myser/emailsvc@sha256:728fa1faff4cab8ae09f1d5f55a4738af6d1bd3aa0c543dbebc0c83a34a88f13
          imagePullPolicy: Always
          name: emailsvc
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - emailsvc
        from:
          kind: ImageStreamTag
          name: emailsvc:latest
          namespace: myser1
        lastTriggeredImage: docker-registry.default.svc:5000/myser/emailsvc@sha256:728fa1faff4cab8ae09f1d5f55a4738af6d1bd3aa0c543dbebc0c83a34a88f13
      type: ImageChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: 2020-02-25T09:16:34Z
      lastUpdateTime: 2020-02-25T09:16:34Z
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    - lastTransitionTime: 2020-02-25T09:16:35Z
      lastUpdateTime: 2020-02-25T09:16:35Z
      message: replication controller "emailsvc-1" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 1
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: 2020-02-25T09:15:54Z
    labels:
      app: emailsvc
      microservice: emailsvc
    name: emailsvc
    namespace: myser1
    resourceVersion: "347861"
    selfLink: /api/v1/namespaces/myser/services/emailsvc
    uid: 6d1b6e86-57af-11ea-8374-026d5f68d8cc
  spec:
    clusterIP: 172.30.27.210
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: emailsvc
      deploymentconfig: emailsvc
      microservice: emailsvc
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
