myphp1.yaml
apiVersion: v1
kind: Service
metadata:
  name: myphp4
  labels:
    name: myphp4
spec:
  type: NodePort
  ports:
    - port: 3038
      nodePort: 30038
      name: http
  selector:
    application: test1
