myser.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: newapp
  name: newapp
  namespace: build2
spec:
  type: NodePort
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 30036
  selector:
    deploymentconfig: newapp
  sessionAffinity: None
