service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myphp2
  labels:
    name: myphp2
spec:
  type: NodePort
  ports:
    - port: 3088
      nodePort: 30388
      targePort: 8080
  selector:
    deploymentconfig: myphp
