automation.yaml

apiVersion: build.openshift.io/v1
kind: BuildConfig
metadata:

  labels:
    app: newapp
  name: newapp
  namespace: build2

spec:
  nodeSelector: null
  output:
    to:
      kind: ImageStreamTag
      name: 'myapp1:latest'
  postCommit: {}
  resources: {}
  runPolicy: Serial
  source:
    git:
      ref: master
      uri: 'https://github.com/VeerMuchandi/bgdemo.git'
    type: Git
  strategy:
    sourceStrategy:
      from:
        kind: ImageStreamTag
        name: 'php:7.1'
        namespace: openshift
    type: Source

status:
  lastVersion: 1

apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:

  labels:
    app: newapp
  name: newapp
  namespace: build2
spec:
  replicas: 1
  selector:
    deploymentconfig: newapp
  resources: {}
  rollingParams: null
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: newapp
        deploymentconfig: newapp
    spec:
      containers:
        - image: myapp1/myapp1:latest
          imagePullPolicy: Always
          name: myapp1
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - myapp1
        from:
          kind: ImageStreamTag
          name: 'myapp1:latest'
          namespace: build2
      type: ImageChange

apiVersion: v1
kind: Service
metadata:
  labels:
    app: newapp
  name: newapp
  namespace: build2
spec:
  type: NodePort
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 30036
  selector:
    deploymentconfig: newapp
  sessionAffinity: None

apiVersion: v1
kind: Route
metadata:
  name: newapp
spec:
  host: myapp1-build2.openshift.cf
  to:
    kind: Service
    name: newapp
