rouet2.yaml
apiVersion: v1
kind: Route
metadata:
  name: myphp2
spec:
  host: myphp1-test.openshift.cf
  path: /
  to:
    kind: Service
    name: myphp2
